--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                         <li class="nav-item mx-3 "><a href="#places" class="nav-link">Places</a></li>
                         <li class="nav-item mx-3 "><a href="#about" class="nav-link">About</a></li>
                         <li class="nav-item mx-3 "><a href="#gallery" class="nav-link">Gallery</a></li>
-                        <li class="nav-item mx-3 "><a href="#clients" class="nav-link">Clients</a></li>
-                        <li class="nav-item mx-3 "><a href="#content" class="nav-link">Content Us</a></li>
+                        <li class="nav-item mx-3 "><a href="#" class="nav-link">Clients</a></li>
+                        <li class="nav-item mx-3 "><a href="#contact" class="nav-link">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                                     <p class="tourCard-price-only">Only</p>
                                     <p class="tourCard-price-value">$1699</p>
                                 </div>
-                                <a href="#" class="tourBtn tourBtn-white">Book Now!</a>
+                                <a href="" class="tourBtn tourBtn-white">Book Now!</a>
                             </div>
                         </div>
                     </div>
@@ -342,12 +342,11 @@
 
     <!-- Contact Us - Aung Phone Pyae -->
     <section id="contact">
-        <h3 class="mt-5 text-center gallery_title">Contact Us</h3>
-        <div class="container contact">          
+        <div class="container contact my-5">          
             <div class="row">
 
                 <div class="col-md-3">
-                    <div class="contact-info">
+                    <div class="contact-info text-center">
                         <img src="images/contact-image.jpg" alt="image"/>
                         <h2>Contact Us</h2>
                         <h4>We would love to hear from you!</h4>
@@ -388,7 +387,7 @@
                         <div class="form-group">        
                         <div class="col-sm-offset-2 col-sm-10">
                             <!-- <button type="submit" class="discoverBtn">Submit</button> -->
-                            <a href="#" class="discoverBtn">Submit</a>
+                            <a href="index.html" class="discoverBtn">Submit</a>
                         </div>
                         </div>
                         
