--- a/index.html
+++ b/index.html
@@ -242,33 +242,43 @@
                     </div>
                 </div>
                 <!-- ABOUT TEXT -->
-                <div class="col-md-6">
+                <div class="col-md-5">
                     <div class="about-text">
                         <h2>We are <strong style="color: #FF9E00;">Travel experts</strong></h2>
-                        <p class="wow fadeInDown" data-wow-delay=".4s">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose.</p>
-                    </div>                   
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur.</p>
+                        <br>
+                    </div>  
+                </div>
                     <!-- ABOUT ICONS -->
-                    <div class="row">
+                    <div class="row my-3">
 
-                        <div class="col-lg-4 col-sm-6 col-ex-12 about-item wow lightSpeedIn" data-wow-offset="200" >
+                        <div class="col-lg-3 col-sm-6 col-ex-12 about-item wow lightSpeedIn" data-wow-offset="200" >
                             <span class="fa fa-percent"></span>
                             <h3>Travel Cheap</h3>
                         </div>
 
-                        <div class="col-lg-4 col-sm-6 col-ex-12 about-item wow lightSpeedIn" data-wow-offset="200">
+                        <div class="col-lg-3 col-sm-6 col-ex-12 about-item wow lightSpeedIn" data-wow-offset="200">
                             <span class="fa fa-plane"></span>
                             <h3>Travel Comfort</h3>
                         </div>
 
-                        <div class="col-lg-4 col-sm-6 col-ex-12 about-item wow lightSpeedIn" data-wow-offset="200">
+                        <div class="col-lg-3 col-sm-6 col-ex-12 about-item wow lightSpeedIn" data-wow-offset="200">
                             <span class="fa fa-heart"></span>
                             <h3>Travel Safe</h3>
                         </div>
+
+                        <div class="col-lg-3 col-sm-6 col-ex-12 about-item wow lightSpeedIn" data-wow-offset="200">
+                            <span class="fa fa-smile"></span>
+                            <h3>Travel Happy</h3>
+                        </div>
                       
-                    </div>
-                </div>    
+                    </div>    
             
-        </div>
+            </div>
     </section>    
     <!-- End About -->
 
