--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
             </div>
                     
         </div>
+
+        <div class="d-block d-md-none text-center home_smalldiv my-5">
+            <h4>Enjoy Vacation With <b class="a">N-Earth</b></h4>
+                <p class="my-5">Travel to the any corner of the world, without going <br> around in circles.</p>
+                <button class="homebtn mb-5">Book a Tour</button>
+        </div>
     <!-- End Home -->
 
     <!-- Place - Htet Yin Min -->
