--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top">
             <div class="container">
-                <a href="" class="navbar-brand"><span class="logo_text">N</span><span> - </span><span class="travel">Earth</span></a>
+                <a href="" class="navbar-brand"><span class="logo_text">N</span><span style="font-family: roboto-bold;"> - </span><span class="travel">Earth</span></a>
                 <button class="navbar-toggler" data-bs-target="#Nav" data-bs-toggle="collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="Nav">
                     <ul class="navbar-nav ms-auto mr-5">
-                        <li class="nav-item mx-3 "><a href="index.html" class="nav-link">Home</a></li>
-                        <li class="nav-item mx-3 "><a href="#places" class="nav-link">Places</a></li>
-                        <li class="nav-item mx-3 "><a href="#about" class="nav-link">About</a></li>
-                        <li class="nav-item mx-3 "><a href="#gallery" class="nav-link">Gallery</a></li>
-                        <li class="nav-item mx-3 "><a href="#" class="nav-link">Clients</a></li>
-                        <li class="nav-item mx-3 "><a href="#contact" class="nav-link">Contact Us</a></li>
+                        <li class="nav-item mx-3 "><a href="index.html" class="nav-link text-uppercase">Home</a></li>
+                        <li class="nav-item mx-3 "><a href="#places" class="nav-link text-uppercase">Places</a></li>
+                        <li class="nav-item mx-3 "><a href="#about" class="nav-link text-uppercase">About</a></li>
+                        <li class="nav-item mx-3 "><a href="#gallery" class="nav-link text-uppercase">Gallery</a></li>
+                        <li class="nav-item mx-3 "><a href="#" class="nav-link text-uppercase">Clients</a></li>
+                        <li class="nav-item mx-3 "><a href="#contact" class="nav-link text-uppercase">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -421,8 +421,8 @@
                     <div class="col-12 col-md-6">
                         <div class="navbar navbar-expand navbar-dark footerNav">
                             <ul class="navbar-nav m-auto">
-                                <li class="nav-item text-uppercase"><a href="" class="nav-link">Company</a></li>
-                                <li class="nav-item text-uppercase"><a href="" class="nav-link">Contact us</a></li>
+                                <li class="nav-item text-uppercase"><a href="#about" class="nav-link">Company</a></li>
+                                <li class="nav-item text-uppercase"><a href="#contact" class="nav-link">Contact us</a></li>
                                 <li class="nav-item text-uppercase"><a href="" class="nav-link">Privacy Policy</a></li>
                                 <li class="nav-item text-uppercase"><a href="" class="nav-link">Terms</a></li>
                             </ul>
