--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
            <div class="about-title">
                 <div class="col-sm-12">
                     <div class="section-title text-center">
-                        <h3>Who We Are?</h3>
+                        <h3 class="mb-5">Who We Are?</h3>
                         <hr>
                     </div>
                 </div>
@@ -248,19 +248,19 @@
                     </div>
                 </div>
                 <!-- ABOUT TEXT -->
-                <div class="col-md-5">
+                <div class="col-md-6">
                     <div class="about-text">
-                        <h2>We are <strong style="color: #FF9E00;">Travel experts</strong></h2>
+                        <h2 class="my-3">We are <strong style="color: #FF9E00;">Travel experts</strong></h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur.</p>
+                        cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <br>
                     </div>  
                 </div>
                     <!-- ABOUT ICONS -->
-                    <div class="row my-3">
+                    <div class="row my-5 py-3">
 
                         <div class="col-lg-3 col-sm-6 col-ex-12 about-item wow lightSpeedIn" data-wow-offset="200" >
                             <span class="fa fa-percent"></span>
