--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
     <!-- travel HighLight -->
     <section id="travelHighlight">
-        <h3 class="text-center my-5 gallery_title">Travel Highlight</h3>
+        <h3 class="text-center my-5 pt-5 gallery_title">Travel Highlight</h3>
         <div class="container-fluid bg_highlight highlight_frame">
             <div class="centerbtn">
                 <a href="https://www.youtube.com/watch?v=AHW5x7cmf1U" class="video_link"><i class="fas fa-play-circle play_btn"></i></a>
