--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
            <div class="about-title">
                 <div class="col-sm-12">
                     <div class="section-title text-center">
-                        <h3 class="mb-5">Who We Are?</h3>
+                        <h3 class="mb-3">Who We Are?</h3>
                         <hr>
                     </div>
                 </div>
@@ -244,7 +244,7 @@
                 <!-- ABOUT IMAGE -->
                 <div class="col-md-6">
                     <div class="about-image">
-                        <img src="images/about-travellerMinimal.jpg" class="img-fluid">
+                        <img src="images/about.jpg" class="img-fluid">
                     </div>
                 </div>
                 <!-- ABOUT TEXT -->
@@ -260,24 +260,24 @@
                     </div>  
                 </div>
                     <!-- ABOUT ICONS -->
-                    <div class="row my-5 py-3">
+                    <div class="row my-3 py-3">
 
-                        <div class="col-lg-3 col-sm-6 col-ex-12 about-item wow lightSpeedIn" data-wow-offset="200" >
+                        <div class="col-lg-3 col-sm-6 col-ex-12 mb-4 my-3 about-item wow lightSpeedIn" data-wow-offset="200" >
                             <span class="fa fa-percent"></span>
                             <h3>Travel Cheap</h3>
                         </div>
 
-                        <div class="col-lg-3 col-sm-6 col-ex-12 about-item wow lightSpeedIn" data-wow-offset="200">
+                        <div class="col-lg-3 col-sm-6 col-ex-12 mb-4 my-3 about-item wow lightSpeedIn" data-wow-offset="200">
                             <span class="fa fa-plane"></span>
                             <h3>Travel Comfort</h3>
                         </div>
 
-                        <div class="col-lg-3 col-sm-6 col-ex-12 about-item wow lightSpeedIn" data-wow-offset="200">
+                        <div class="col-lg-3 col-sm-6 col-ex-12 mb-4 my-3 about-item wow lightSpeedIn" data-wow-offset="200">
                             <span class="fa fa-heart"></span>
                             <h3>Travel Safe</h3>
                         </div>
 
-                        <div class="col-lg-3 col-sm-6 col-ex-12 about-item wow lightSpeedIn" data-wow-offset="200">
+                        <div class="col-lg-3 col-sm-6 col-ex-12 mb-4 my-3 about-item wow lightSpeedIn" data-wow-offset="200">
                             <span class="fa fa-smile"></span>
                             <h3>Travel Happy</h3>
                         </div>
