--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <!-- ABOUT IMAGE -->
                 <div class="col-md-6">
                     <div class="about-image">
-                        <img src="images/about.jpg" class="img-fluid">
+                        <img src="images/about.jpg" class="img-fluid" style="height: 330px;">
                     </div>
                 </div>
                 <!-- ABOUT TEXT -->
@@ -254,8 +254,8 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.Duis aute irure dolor in reprehenderit in voluptate velit esse.
+                        </p>
                         <br>
                     </div>  
                 </div>
