--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Home - Kyaw San Win -->
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top">
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark sticky-top py-0">
             <div class="container">
                 <a href="" class="navbar-brand"><span class="logo_text">N</span><span style="font-family: roboto-bold;"> - </span><span class="travel">Earth</span></a>
                 <button class="navbar-toggler" data-bs-target="#Nav" data-bs-toggle="collapse">
