--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
     
                     <div class="col-12 col-md-6">
                         <div class="footerCopyright text-center">
-                            ©Copyright | N-Travel 2021. All Right Reserved
+                            ©Copyright | N-Earth 2021. All Right Reserved
                         </div>
                     </div>
 
