--- a/index.html
+++ b/index.html
@@ -264,22 +264,22 @@
 
                         <div class="col-lg-3 col-sm-6 col-ex-12 mb-4 my-3 about-item wow lightSpeedIn" data-wow-offset="200" >
                             <span class="fa fa-percent"></span>
-                            <h3>Travel Cheap</h3>
+                            <h3 class="mt-2">Travel Cheap</h3>
                         </div>
 
                         <div class="col-lg-3 col-sm-6 col-ex-12 mb-4 my-3 about-item wow lightSpeedIn" data-wow-offset="200">
                             <span class="fa fa-plane"></span>
-                            <h3>Travel Comfort</h3>
+                            <h3 class="mt-2">Travel Comfort</h3>
                         </div>
 
                         <div class="col-lg-3 col-sm-6 col-ex-12 mb-4 my-3 about-item wow lightSpeedIn" data-wow-offset="200">
                             <span class="fa fa-heart"></span>
-                            <h3>Travel Safe</h3>
+                            <h3 class="mt-2">Travel Safe</h3>
                         </div>
 
                         <div class="col-lg-3 col-sm-6 col-ex-12 mb-4 my-3 about-item wow lightSpeedIn" data-wow-offset="200">
                             <span class="fa fa-smile"></span>
-                            <h3>Travel Happy</h3>
+                            <h3 class="mt-2">Travel Happy</h3>
                         </div>
                       
                     </div>    
