--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                     
         </div>
 
-        <div class="d-block d-md-none text-center home_smalldiv my-5">
+        <div class="d-block d-lg-none text-center home_smalldiv my-5">
             <h4>Enjoy Vacation With <b class="a">N-Earth</b></h4>
                 <p class="my-5">Travel to the any corner of the world, without going <br> around in circles.</p>
-                <button class="homebtn mb-5">Book a Tour</button>
+                <button class="discoverBtn mb-3">Book a Tour</button>
         </div>
     <!-- End Home -->
 
