--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             </div>
         </div>
     </nav>
-    <div class="carousel slide carousel-fade" style="z-index: 0;" data-bs-ride="carousel" id="carousel">
+    <div class="carousel slide carousel-fade" style="z-index: 0;" data-bs-ride="carousel" data-bs-pause=="false"
+        id="carousel">
 
         <div class="carousel-inner">
 
