home page update

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="carousel_text d-none d-lg-block">
                     <h1 class="font">Enjoy Vacation With <b class="a">N-Earth</b></h1>
                     <p class="my-4 co_title">Travel to the any corner of the world, without going around in circles.</p>
-                    <button class="homebtn">Book a Tour</button>
+                    <button class="homebtn" data-bs-target="#Modal" data-bs-toggle="modal">Book a Tour</button>
                 </div>
             </div>
 
@@ -56,7 +56,7 @@
                 <div class="carousel_text d-none d-lg-block">
                     <h1 class="font">Enjoy Vacation With <b class="a">N-Earth</b></h1>
                     <p class="my-4 co_title">Travel to the any corner of the world, without going around in circles.</p>
-                    <button class="homebtn">Book a Tour</button>
+                    <button class="homebtn" data-bs-target="#Modal" data-bs-toggle="modal">Book a Tour</button>
                 </div>
             </div>
 
@@ -65,7 +65,7 @@
                 <div class="carousel_text d-none d-lg-block">
                     <h1 class="font">Enjoy Vacation With <b class="a">N-Earth</b></h1>
                     <p class="my-4 co_title">Travel to the any corner of the world, without going around in circles.</p>
-                    <button class="homebtn mt-3" data-bs-target="#Modal" data-bs-toggle="modal"><b>Book a
+                    <button class="homebtn" data-bs-target="#Modal" data-bs-toggle="modal"><b>Book a
                             Tour</b></button>
                 </div>
             </div>
