Update Boot a tour btn

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="d-block d-lg-none text-center home_smalldiv my-5">
         <h4>Enjoy Vacation With <b class="a">N-Earth</b></h4>
         <p class="my-5">Travel to the any corner of the world, without going <br> around in circles.</p>
-        <button class="discoverBtn mb-3">Book a Tour</button>
+        <button class="discoverBtn mb-3" data-bs-target="#Modal" data-bs-toggle="modal">Book a Tour</button>
     </div>
     <!-- End Home -->
 
