--- a/index.html
+++ b/index.html
@@ -358,6 +358,47 @@
     </section>
     <!-- End Gallery -->
 
+     <!-- Client - Thet Lin Aung -->
+     <section class="pn_reviews my-5">
+        <h3 class="text-center my-5 pt-5 gallery_title">Review Of Our Clients</h3>
+		<div class="container">
+		    <div class="row">
+			  <div class="col-md-12 col-lg-4">
+				<div class="pn_testimonial_box mt-4">
+				    <p class="text-justify">What does Lorem Ipsum mean? Derived from Latin dolorem ipsum (“pain itself”), Lorem Ipsum is filler text used by publishers and graphic designers used to demonstrate graphic elements.</p>
+	  
+				    <div class="row pt-3">
+					  <div class="col-md-6 pn_review_profile"><img src="images/client1.jpg"  class="border-radius float-right" alt="client image" /> <span> Charles Boyle </span> </div>
+					  <div class="col-md-6 pn_review_rating d-flex justify-content-end"> 5 &nbsp; <img class="image-radius aligncenter" src="https://desklib.com/static/src/assets/images/v2/star_rating.svg" alt="client stars image" /> </div>
+				    </div>
+				</div>
+			  </div>
+			  <div class="col-md-12 col-lg-4">
+				<div class="pn_testimonial_box mt-4">
+				    <p class="text-justify">What does Lorem Ipsum mean? Derived from Latin dolorem ipsum (“pain itself”), Lorem Ipsum is filler text used by publishers and graphic designers used to demonstrate graphic elements.
+	  </p>
+				    <div class="row pt-3">
+					  <div class="col-md-6 pn_review_profile"><img src="images/client2.jpg" class="border-radius float-right" alt="client image" /> <span> Gina Lannety </span> </div>
+					  <div class="col-md-6 pn_review_rating d-flex justify-content-end"> 5 &nbsp; <img class="image-radius aligncenter" src="https://desklib.com/static/src/assets/images/v2/star_rating.svg" alt="client stars image" /> </div>
+				    </div>
+				</div>
+			  </div>
+			  <div class="col-md-12 col-lg-4">
+				<div class="pn_testimonial_box mt-4">
+				    <p class="text-justify">What does Lorem Ipsum mean? Derived from Latin dolorem ipsum (“pain itself”), Lorem Ipsum is filler text used by publishers and graphic designers used to demonstrate graphic elements.
+	   </p>
+				    <div class="row pt-3">
+					  <div class="col-md-6 pn_review_profile"><img src="images/client3.jpg" class="border-radius float-right" alt="client image" /> <span> Dug Judey </span> </div>
+					  <div class="col-md-6 pn_review_rating d-flex justify-content-end"> 4 &nbsp; <img class="image-radius aligncenter" src="https://desklib.com/static/src/assets/images/v2/star_rating.svg" alt="stars image" /> </div>
+				    </div>
+				</div>
+			  </div>
+		    </div>
+		</div>
+	</section>
+
+    <!-- End Client -->
+
     <!-- travel HighLight -->
     <section id="travelHighlight">
         <h3 class="text-center my-5 pt-5 gallery_title">Travel Highlight</h3>
@@ -371,10 +412,7 @@
 
     <!-- End travel Highlight -->
 
-    <!-- Client - Thet Lin Aung -->
-
-
-    <!-- End Client -->
+   
 
     <!-- Contact Us - Aung Phone Pyae -->
     <section id="contact">
